# nervproj

./: .editorconfig  .gitattributes  .gitignore  .vs_env  LICENSE  README.md  cli.bat  cli.py  cli.sh  config.json  config.yml  nvp.bat
app/sdlab/: main.py
assets/stable_diffusion/: v1-inference.yaml
assets/templates/: clang_format.tpl  clang_tidy.tpl  clangd.tpl  class_header.h.tpl  class_impl.cpp.tpl  cli.bat.tpl  cli.py.tpl  cli.sh.tpl  cmake_macros.cmake.tpl  default_class.tpl  editorconfig.tpl  executable_cmakelists.txt.tpl  executable_main.cpp.tpl  gitignore.tpl  header_file.h.tpl  main_cmakelists.txt.tpl  module_cmakelists.txt.tpl  module_common.cpp.tpl  module_common.h.tpl  module_exports.h.tpl  module_precomp.cpp.tpl  module_precomp.h.tpl  module_shared_cmakelists.txt.tpl  module_static_cmakelists.txt.tpl  nervbind.lua.tpl  nvp_config.json.tpl  nvp_plug.py.tpl  ssl_client.cnf  ssl_root.cnf  vs_env.tpl
modules/: admin_manager.py  build_manager.py  manager_base.py
nvp/: admin_manager.py  build_manager.py  gitlab_manager.py  manager_base.py  nvp_builder.py  nvp_compiler.py  nvp_component.py  nvp_context.py  nvp_object.py  nvp_project.py
nvp/admin/: brotli_handler.py  cv_builder.py  cv_builder_base.py  cv_builder_v0.py  cv_builder_v1.py  gears_handler.py  iptables_manager.py
nvp/ai/: stable_diffusion.py  whisper_gen.py
nvp/builders/: METIS.py  OSG.py  anttweakbar.py  basisu.py  boost.py  brotli.py  bzip2.py  cairo.py  cgal.py  cglm.py  clipper2.py  cryptopp.py  (+55 more)
sources/pyfn2/: CMakeLists.txt  bindings.cpp
tests/: utils.py
tools/: requirements.txt
(+56 files in other folders)
